--- a/org.scala-ide.scala.library/pom.xml
+++ b/org.scala-ide.scala.library/pom.xml
@@ -12,28 +12,6 @@
   <description>Bundle containing the Scala library</description>
   <packaging>bundle</packaging>
 
-  <properties>
-    <!-- default value for Scala 2.9.x, can be overwritten by profiles -->
-    <scala.library.third-part>scala-dbc</scala.library.third-part>
-  </properties>
-
-  <profiles>
-    <profile>
-      <!--- the profile using the default values. Scala 2.10.x -->
-      <id>scala-2.10.x</id>
-      <properties>
-        <scala.library.third-part>scala-actors</scala.library.third-part>
-      </properties>
-    </profile>
-    <profile>
-      <!--- the profile using the default values. Scala 2.11.x -->
-      <id>scala-2.11.x</id>
-      <properties>
-        <scala.library.third-part>scala-actors</scala.library.third-part>
-      </properties>
-    </profile>
-  </profiles>
-
   <dependencies>
     <!-- the 3 parts of scala library -->
     <dependency>
@@ -48,7 +26,7 @@
     </dependency>
     <dependency>
       <groupId>org.scala-lang</groupId>
-      <artifactId>${scala.library.third-part}</artifactId>
+      <artifactId>scala-actors</artifactId>
       <optional>true</optional>
     </dependency>
   </dependencies>
@@ -84,10 +62,10 @@
                 </artifactItem>
                 <artifactItem>
                   <groupId>org.scala-lang</groupId>
-                  <artifactId>${scala.library.third-part}</artifactId>
+                  <artifactId>scala-actors</artifactId>
                   <classifier>sources</classifier>
                   <type>jar</type>
-                  <destFileName>${scala.library.third-part}-src.jar</destFileName>
+                  <destFileName>scala-actors-src.jar</destFileName>
                 </artifactItem>
               </artifactItems>
               <outputDirectory>${project.build.directory}/lib</outputDirectory>
