--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -31,7 +31,6 @@
     <module>../org.scala-ide.sdt.update-site</module>
   </modules>
 
-
   <repositories>
     <repository>
       <id>eclipse.${eclipse.codename}</id>
@@ -52,47 +51,18 @@
       </snapshots>
     </repository>
     <repository>
-      <id>scala-refactoring</id>
-      <name>Scala Refactoring p2 repository</name>
-      <layout>p2</layout>
-      <url>${repo.scala-refactoring}</url>
-    </repository>
-    <repository>
-      <id>scalariform</id>
-      <name>Scalariform Scala p2 repository</name>
-      <layout>p2</layout>
-      <url>${repo.scalariform}</url>
-    </repository>
-    <repository>
       <id>equinox.launcher</id>
       <name>Equinox weaving launcher p2 repository</name>
       <layout>p2</layout>
       <url>${repo.equinox.launcher}</url>
     </repository>
+    <repository>
+      <id>scala-ide</id>
+      <name>Scala IDE dependencies p2 repository</name>
+      <layout>p2</layout>
+      <url>${repo.scala-ide.dependencies}</url>
+    </repository>
   </repositories>
-
-  <dependencies>
-    <!-- because the Scala plugins were build locally in build-toolchain, and
-         are only available in the local maven repository, we need to reference
-         then as maven dependencies -->
-    <dependency>
-      <groupId>org.scala-ide</groupId>
-      <artifactId>org.scala-ide.scala.library</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-ide</groupId>
-      <artifactId>org.scala-ide.scala.compiler</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.scala-ide</groupId>
-      <artifactId>org.scala-ide.sbt.full.library</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-  </dependencies>
-
-
 
   <build>
     <plugins>
