Fixes ScaladocGlobalTrait initialization
Packages for 2.11/2.10 source directories

Adds a basic doc test
Corrects PC thread confinement

Corrects Analyzer plugin initialization

Conflicts:
	org.scala-ide.sdt.core.tests/src/scala/tools/eclipse/pc/DocumentationTest.scala
	org.scala-ide.sdt.core.tests/src/scala/tools/eclipse/pc/PresentationCompilerTest.scala
	org.scala-ide.sdt.core/src/scala/tools/eclipse/LocateSymbol.scala

--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -185,6 +185,23 @@
           <configLocation>../org.scala-ide.sdt.core/scala-ide-style-config.xml</configLocation>
         </configuration>
       </plugin>
+<!-- add source folder containing the code specific to the scala version -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals><goal>add-source</goal></goals>
+            <configuration>
+              <sources>
+                <source>src-${version.suffix}</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
