Added a source bundle for the sbt library.
This commit allows debugging, hyperlinking, etc. towards
sbt sources. Useful when working on the Sbt builder.

* create a source bundle for the sbt library. I needed to
  inline the contents of sbt jars in order to get Eclipse
  to correctly associate sources with classfiles

* created a new compiler.interface bundle, only for the
  compiler interface. Sbt requires this to be a separate jar
  and there was no way to build a single sbt bundle with
  only some of the dependencies inlined.

A similar approach could be used for the Scala library/compiler
bundles, but we should investigate the possibility of having the
Scala team publish source bundles too.

--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -17,5 +17,7 @@
     <module>../org.scala-ide.scala.library</module>
     <module>../org.scala-ide.scala.compiler</module>
     <module>../org.scala-ide.sbt.full.library</module>
+    <module>../org.scala-ide.sbt.full.library.source</module>
+    <module>../org.scala-ide.sbt.compiler.interface</module>
   </modules>
 </project>
