--- a/org.scala-ide.sdt.build/pom.xml
+++ b/org.scala-ide.sdt.build/pom.xml
@@ -82,12 +82,22 @@
     </dependency>
     <dependency>
       <groupId>org.scala-ide</groupId>
+      <artifactId>org.scala-ide.sbt.full.library.source</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.scala.compiler</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.scala-ide</groupId>
       <artifactId>org.scala-ide.sbt.full.library</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-ide</groupId>
+      <artifactId>org.scala-ide.sbt.compiler.interface</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
