Rename Colour to Color to improve compatibility...
... with third-party plugins like the Eclipse Color Theme Plugin

The important part is the change in
  val FOREGROUND_COLOUR_SUFFIX = ".colour"
but considering that Eclipse itself seems to have converged on “Color”,
I renamed everything appropriately to not create confusion whether color
or colour needs to be used.

With this change the Eclipse Color Theme Plugin “just works” (one commit
against Eclipse Color Theme Plugin pending, which updates the mapping).

--- a/org.scala-ide.sdt.core/plugin.xml
+++ b/org.scala-ide.sdt.core/plugin.xml
@@ -56,10 +56,10 @@
       <page class="scala.tools.eclipse.properties.ScalaPreferences"
             name="Scala"
             id="org.scala-ide.sdt.core.preferences"/>
-      <page class="scala.tools.eclipse.properties.syntaxcolouring.SyntaxColouringPreferencePage"
+      <page class="scala.tools.eclipse.properties.syntaxcoloring.SyntaxColoringPreferencePage"
             category="org.scala-ide.sdt.core.preferences"
             name="Syntax Coloring"
-            id="org.scala-ide.sdt.core.properties.syntaxcolouring.SyntaxColouringPreferencePage"/>
+            id="org.scala-ide.sdt.core.properties.syntaxcoloring.SyntaxColoringPreferencePage"/>
       <page
             category="org.scala-ide.sdt.core.preferences"
             class="scala.tools.eclipse.properties.CompilerSettings"
@@ -798,7 +798,7 @@
         id="org.scala-ide.sdt.core.preferences"
         point="org.eclipse.core.runtime.preferences">
      <initializer
-           class="scala.tools.eclipse.properties.syntaxcolouring.ColourPreferenceInitializer">
+           class="scala.tools.eclipse.properties.syntaxcoloring.ColorPreferenceInitializer">
      </initializer>    
      <initializer
            class="scala.tools.eclipse.properties.ScalaCompilerPreferenceInitializer">
