--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,8 @@
 
      <!-- default values, can be overwritten by profiles -->
      <scala.version>2.10.0</scala.version>
+     <scala.binary.version>2.10</scala.binary.version>
+     <scala.xml.version>1.0-RC1</scala.xml.version>
      <scala.library.version>${scala.version}</scala.library.version>
      <version.suffix>2_10</version.suffix>
      <version.tag>local</version.tag>
@@ -84,6 +86,7 @@
       <id>scala-2.11.x</id>
       <properties>
         <scala.version>2.11.0-SNAPSHOT</scala.version>
+        <scala.binary.version>2.11.0-M4</scala.binary.version>
         <version.suffix>2_11</version.suffix>
 
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-211x</repo.scala-refactoring>
@@ -346,8 +349,8 @@
       </dependency>
       <dependency>
         <groupId>org.scala-lang</groupId>
-        <artifactId>scala-xml</artifactId>
-        <version>${scala.library.version}</version>
+        <artifactId>scala-xml_${scala.binary.version}</artifactId>
+        <version>${scala.xml.version}</version>
       </dependency>
       <dependency>
         <groupId>org.scala-lang</groupId>
