--- a/pom.xml
+++ b/pom.xml
@@ -76,11 +76,11 @@
         <scala.version>2.10.2</scala.version>
         <scala.era.major.version>2.10</scala.era.major.version>
         <version.suffix>2_10</version.suffix>
-        <sbt.version>0.13.0-RC5-SNAPSHOT</sbt.version>
+        <sbt.version>0.13.0</sbt.version>
 
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-210x</repo.scala-refactoring>
         <repo.scalariform>${repo.scala-ide.root}/scalariform-210x</repo.scalariform>
-        <repo.typesafe>http://repo.typesafe.com/typesafe/ide-2.10</repo.typesafe>
+        <repo.typesafe>http://private-repo.typesafe.com/typesafe/ide-2.10</repo.typesafe>
       </properties>
     </profile>
 
@@ -94,7 +94,7 @@
 
         <repo.scala-refactoring>${repo.scala-ide.root}/scala-refactoring-211x</repo.scala-refactoring>
         <repo.scalariform>${repo.scala-ide.root}/scalariform-211x</repo.scalariform>
-        <repo.typesafe>http://repo.typesafe.com/typesafe/ide-2.11</repo.typesafe>
+        <repo.typesafe>http://private-repo.typesafe.com/typesafe/ide-2.11</repo.typesafe>
       </properties>
     </profile>
 
