--- a/org.scala-ide.sbt.compiler.interface/pom.xml
+++ b/org.scala-ide.sbt.compiler.interface/pom.xml
@@ -46,7 +46,7 @@
           <instructions>
             <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Bundle-Name>Sbt ${sbt.ide.version} Compiler Interface for Eclipse</Bundle-Name>
+            <Bundle-Name>Sbt Compiler Interface for Eclipse</Bundle-Name>
             <!-- put a '-' after the sbt.version since it already has a '-scalaide-01' qualifier. Remove it the qualifier is gone. -->
             <Bundle-Version>${sbt.version}.${version.tag}-${version.suffix}-${maven.build.timestamp}</Bundle-Version>
             <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
