--- a/org.scala-ide.sbt.full.library.source/pom.xml
+++ b/org.scala-ide.sbt.full.library.source/pom.xml
@@ -175,7 +175,7 @@
           <instructions>
             <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-            <Bundle-Name>Sbt ${sbt.ide.version} Library Sources for Eclipse</Bundle-Name>
+            <Bundle-Name>Sbt Library Sources for Eclipse</Bundle-Name>
             <Bundle-Version>${sbt.version}.${version.tag}-${version.suffix}-${maven.build.timestamp}</Bundle-Version>
             <!-- This defines the bundle we provide the source for -->
             <Eclipse-SourceBundle>org.scala-ide.sbt.full.library;version="${sbt.version}.${version.tag}-${version.suffix}-${maven.build.timestamp}";roots:="."</Eclipse-SourceBundle>
