--- a/org.scala-ide.sbt.full.library.source/pom.xml
+++ b/org.scala-ide.sbt.full.library.source/pom.xml
@@ -176,9 +176,9 @@
             <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Bundle-Name>Sbt Library Sources for Eclipse</Bundle-Name>
-            <Bundle-Version>${sbt.version}.${version.tag}-${version.suffix}-${maven.build.timestamp}</Bundle-Version>
+            <Bundle-Version>${sbt.osgi.version}</Bundle-Version>
             <!-- This defines the bundle we provide the source for -->
-            <Eclipse-SourceBundle>org.scala-ide.sbt.full.library;version="${sbt.version}.${version.tag}-${version.suffix}-${maven.build.timestamp}";roots:="."</Eclipse-SourceBundle>
+            <Eclipse-SourceBundle>org.scala-ide.sbt.full.library;version="${sbt.osgi.version}";roots:="."</Eclipse-SourceBundle>
             <!-- Extract all sources into this bundle -->
             <Embed-Dependency>classifier=sources;inline=true</Embed-Dependency>
           </instructions>
