Updated our build to use Zinc artifacts
* Updated our build to use the Zinc artifacts built and published by dbuild.  The
main advantage is that we no longer need to build and publish the Sbt artifacts
(which are exactly the same used by Zinc) that are used in the Scala IDE for
incremental compilation.
(cherry picked from commit 6d40a3cd657cb4c5c895fd00946175198f6fcb9b)

* No need to put the sbt version number in the bundle name
(cherry picked from commit 5763bb8ca71dba39e9d927825cb3e33af1e571e8)

* Lifed up version for Sbt bundles in variable ${sbt.osgi.version}
(cherry picked from commit 65306fdb1d613a60f2080ce5c71d4f8efef901ab)

--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -13,6 +13,10 @@
   <packaging>pom</packaging>
   <version>3.0.2-SNAPSHOT</version>
 
+  <properties>
+    <sbt.osgi.version>${sbt.version}.${version.tag}-${version.suffix}-${maven.build.timestamp}</sbt.osgi.version>
+  </properties>
+
   <modules>
     <module>../org.scala-ide.scala.library</module>
     <module>../org.scala-ide.scala.compiler</module>
