Adds AUTHORS to build.properties for binary inclusion

--- a/org.scala-ide.sdt.core/build.properties
+++ b/org.scala-ide.sdt.core/build.properties
@@ -2,6 +2,7 @@ source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
+               ../AUTHORS,\
                docs/,\
                icons/,\
                plugin.xml,\
