--- a/org.scala-ide.sdt.core.tests/build.properties
+++ b/org.scala-ide.sdt.core.tests/build.properties
@@ -1,6 +1,7 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-			   test-workspace/,\
-			   target/lib/,\
-               .
+             test-workspace/,\
+             target/lib/,\
+             ../AUTHORS,\
+             .
