--- a/org.scala-ide.sdt.spy/build.properties
+++ b/org.scala-ide.sdt.spy/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                icons/,\
                .,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               ../AUTHORS
