--- a/pom.xml
+++ b/pom.xml
@@ -120,11 +120,11 @@
       <properties>
         <scala.version>2.11.0-SNAPSHOT</scala.version>
         <scala.binary.version>2.11.0-M7</scala.binary.version>
-        <scala-xml.version.number>1.0.0-RC7</scala-xml.version.number>
-        <scala-parser-combinators.version.number>1.0.0-RC5</scala-parser-combinators.version.number>
-        <scala-continuations-plugin.version.number>1.0.0-RC2</scala-continuations-plugin.version.number>
-        <scala-continuations-library.version.number>1.0.0-RC2</scala-continuations-library.version.number>
-        <scala-swing.version.number>1.0.0-RC2</scala-swing.version.number>
+        <scala-xml.version>1.0.0-RC7</scala-xml.version>
+        <scala-parser-combinators.version>1.0.0-RC5</scala-parser-combinators.version>
+        <scala-continuations-plugin.version>1.0.0-RC2</scala-continuations-plugin.version>
+        <scala-continuations-library.version>1.0.0-RC2</scala-continuations-library.version>
+        <scala-swing.version>1.0.0-RC2</scala-swing.version>
 
         <version.suffix>2_11</version.suffix>
 
@@ -143,27 +143,27 @@
           <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-swing_${scala.binary.version}</artifactId>
-            <version>${scala-swing.version.number}</version>
+            <version>${scala-swing.version}</version>
           </dependency>
           <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-xml_${scala.binary.version}</artifactId>
-            <version>${scala-xml.version.number}</version>
+            <version>${scala-xml.version}</version>
           </dependency>
           <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-parser-combinators_${scala.binary.version}</artifactId>
-            <version>${scala-parser-combinators.version.number}</version>
+            <version>${scala-parser-combinators.version}</version>
           </dependency>
           <dependency>
             <groupId>org.scala-lang.plugins</groupId>
             <artifactId>scala-continuations-plugin_${scala.binary.version}</artifactId>
-            <version>${scala-continuations-plugin.version.number}</version>
+            <version>${scala-continuations-plugin.version}</version>
           </dependency>
           <dependency>
             <groupId>org.scala-lang.plugins</groupId>
             <artifactId>scala-continuations-library_${scala.binary.version}</artifactId>
-            <version>${scala-continuations-library.version.number}</version>
+            <version>${scala-continuations-library.version}</version>
           </dependency>
         </dependencies>
       </dependencyManagement>
