--- a/org.scala-ide.sbt.core/build.properties
+++ b/org.scala-ide.sbt.core/build.properties
@@ -4,16 +4,10 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties,\
-               target/lib/sbt-rc-props.jar,\
-               target/lib/akka-actor_2.10.jar,\
-               target/lib/config.jar,\
+               icons/,\
                target/lib/io.jar,\
-               target/lib/collections.jar,\
-               target/lib/sbt-launch.jar,\
+               target/lib/control.jar,\
+               target/lib/akka-actor_2.10.jar,\
                target/lib/sbt-rc-remote-controller.jar,\
-               target/lib/sbt-rc-ui-interface-0-12.jar,\
-               target/lib/sbt-rc-probe-0-12.jar,\
-               target/lib/sbt-rc-probe-0-13.jar,\
-               target/lib/sbt-rc-ui-interface-0-13.jar,\
-               icons/
+               target/lib/sbt-launch.jar
 
